--- a/ui/styles/layouts/gallery.css
+++ b/ui/styles/layouts/gallery.css
@@ -119,7 +119,7 @@
 
 .image-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   gap: 8px;
 }
 
